issue-18: improve code readability and squash some bugs
Improved readability, mostly with prompt and the bookmarklet strings.

made some changes to eliminate some bugs that made user experience bad

--- a/uni-cal/src/outline-calander/outline_cal.css
+++ b/uni-cal/src/outline-calander/outline_cal.css
@@ -940,6 +940,22 @@ a{
   font-family: var(--font-monospace);
 }
 
+.events-container {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  flex: 1;
+}
+
+.event-item {
+  background: rgba(255, 255, 255, 0.05);
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-family: var(--font-monospace);
+  font-size: 0.80rem;
+  color: var(--text-on-dark);
+}
+
 .preview-actions {
   display: flex;
   gap: 16px;
@@ -987,6 +1003,13 @@ a{
   border-color: var(--text-on-dark);
   transform: translateY(-2px);
   box-shadow: var(--shadow-button-hover);
+}
+
+.mru_link{
+  background-color: var(--color-sage);
+  border-radius: 5px;
+  padding: 0.2em 0.25em;
+  color: var(--text-on-light);
 }
 
 .how-to-note {
